Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #1916: Switch all the .po files to UTF-8
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 