@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #1925: Use members' address as origin of subscription
 - #1916: Switch all the .po files to UTF-8
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
